# flick_player

./: README.md  build.yaml  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
lib/: main.dart
lib/app/: app.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: adaptive_color_provider.dart  adaptive_colors.dart  app_theme.dart
lib/core/utils/: navigation_helper.dart  responsive.dart
lib/data/: database.dart
lib/data/entities/: folder_entity.dart  folder_entity.g.dart  recently_played_entity.dart  recently_played_entity.g.dart  song_entity.dart  song_entity.g.dart
lib/data/repositories/: folder_repository.dart  recently_played_repository.dart  song_repository.dart
lib/models/: song.dart
lib/providers/: equalizer_provider.dart  favorites_provider.dart  library_scanner_provider.dart  navigation_provider.dart  player_provider.dart  providers.dart  songs_provider.dart
lib/services/: color_extraction_service.dart  library_scanner_service.dart  music_folder_service.dart  permission_service.dart  player_service.dart  rust_audio_service.dart  soloud_audio_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/widgets/common/: cached_image_widget.dart  (+3 more)
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: audio_api.rs  mod.rs  scanner.rs
rust/src/audio/: commands.rs  crossfader.rs  decoder.rs  engine.rs  mod.rs  resampler.rs  source.rs
rust_builder/android/: build.gradle  settings.gradle
test/: widget_test.dart
(+30 files in other folders)
