[package]
name = "rust_lib_flick_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
# Enable native audio engine (disabled on Android due to C++ linking issues)
native_audio = ["cpal", "symphonia", "rubato", "ringbuf", "crossbeam-channel"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lofty = "0.21.1"
walkdir = "2"
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] } # Often useful particularly with bridge
parking_lot = "0.12"             # Faster mutexes
once_cell = "1.19"               # Lazy static initialization

# Audio Engine Dependencies (optional, not available on Android)
cpal = { version = "0.15", optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
rubato = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# Enable native audio on desktop platforms only
[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
ringbuf = "0.4"
crossbeam-channel = "0.5"
